# remote-sensor

remote-sensor/: .justfile  Cargo.toml  update-deps.sh
remote-sensor/src/: main.rs
