[package]
name = "remote-sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "defmt", "executor-thread", "integrated-timers", "task-arena-size-98304"] }
embassy-rp = { version = "0.1.0", features = ["critical-section-impl", "defmt", "time-driver", "unstable-pac"] }
embassy-time = { version = "0.3.1", features = ["defmt", "defmt-timestamp-uptime"] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
