[package]
name = "remote-sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
# defmt = "0.3.8"
# defmt-rtt = "0.4.1"
# embassy-executor = { path = "../../embassy/embassy-executor", features = ["arch-cortex-m", "defmt", "executor-thread", "integrated-timers", "task-arena-size-98304"] }
# # embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "defmt", "executor-thread", "integrated-timers", "task-arena-size-98304"] }
# embassy-rp = { path = "../../embassy/embassy-rp", features = ["critical-section-impl", "defmt", "time-driver", "unstable-pac"] }
# embassy-time = { path = "../../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
# panic-probe = { version = "0.3.2", features = ["print-defmt"] }

embassy-embedded-hal = { version = "0.1.0", path = "../../embassy/embassy-embedded-hal", features = ["defmt"] }
embassy-sync = { version = "0.6.0", path = "../../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.5.0", path = "../../embassy/embassy-executor", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.1", path = "../../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", path = "../../embassy/embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { version = "0.2.0", path = "../../embassy/embassy-usb", features = ["defmt"] }
embassy-net = { version = "0.4.0", path = "../../embassy/embassy-net", features = ["defmt", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns"] }
embassy-net-wiznet = { version = "0.1.0", path = "../../embassy/embassy-net-wiznet", features = ["defmt"] }
embassy-futures = { version = "0.1.0", path = "../../embassy/embassy-futures" }
embassy-usb-logger = { version = "0.2.0", path = "../../embassy/embassy-usb-logger" }
cyw43 = { version = "0.1.0", path = "../../embassy/cyw43", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0", path = "../../embassy/cyw43-pio", features = ["defmt", "overclock"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"
static_cell = "2.1.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand = { version = "0.8.5", default-features = false }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"
reqwless = { version = "0.12.0", features = ["defmt",]}


# [patch.crates-io]
